@@ -940,9 +940,12 @@ unreleased Version 0.46.0
     - added linker options to configure map file, import library and PDB file
     - LDC: add option to link against debug runtime library
     - LDC: no longer tries to run cv2pdb
+    - some experimental dub support
+    - fix detection of indows SDK 10, also define $(WindowsSdkVersion)
   * dparser:
     - when building with LDC, use import path from its config file instead of DMDs' sc.ini
     - parse "static foreach" (but no semantic analysis)
+    - for syntax errors underline the full token, not only the first character
   * fixed spurious freeze in precise GC (mostly during startup)
   * indentation of lambdas as parameter arguments now aligns statements on tab stops
   * required OS version for executables restored to 5.01 to support Windows XP
